--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
         <input type="text" class="task-name-input">
     </div>
     <div class="task-list"></div>
+    <hr>
+    <footer class="filter-menu">
+            <div class="filter">All</div>
+            <div class="filter">Active</div>
+            <div class="filter">Done</div>
+    </footer>
 </section>
+
 </div>
+
 <script src="main.js"></script>
 </body>
 </html>
